Update 4.1 Apply secure design principles in network architectures.md

--- a/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
+++ b/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
@@ -664,5 +664,294 @@ Forward secrecy in TLS ensures that even if an attacker compromises a session ke
 
 ---
 
+## 4.1.4 Implications of multilayer protocols ##
 
+TCP/IP is a well-established protocol suite that serves as the backbone of modern networking. It exemplifies a multilayer protocol architecture, with each layer dedicated to a specific set of tasks. This division allows multiple protocols to function across different layers of the protocol stack, each handling specific tasks in the data transmission process. A core feature of this architecture is **encapsulation**, which plays a crucial role in ensuring data integrity and secure communication. Encapsulation is the process of wrapping one protocol's data within the payload of another protocol. This method ensures that each layer in the protocol stack operates independently, with its own set of responsibilities. When a communication occurs between two devices, the data moves through multiple protocol layers, with each layer adding its own header, containing information relevant to the layer’s function. This stacking of protocols is what forms the multilayer model.
 
+Consider for example the process of transferring data from a web server to a web browser. The application layer begins with HTTP (Hypertext Transfer Protocol), which is the protocol used for web communication. This HTTP data is then passed to the transport layer, where it is TCP-encapsulated. TCP is a connection-oriented protocol that ensures reliable data transmission by providing error-checking and flow control mechanisms. After the data is encapsulated by TCP, it moves to the network layer, where IP (Internet Protocol) encapsulates the entire packet. At the data link layer, the IP packet is then encapsulated by the Ethernet protocol, which adds the necessary physical addressing information to enable transmission over a local area network.
+
+This process of encapsulation ensures that each layer of the network stack can focus on its specific tasks while maintaining the integrity and security of the communication. For example, SSL/TLS encryption can be added to the data before it is passed through the TCP layer to provide additional confidentiality, especially when transmitting sensitive information such as login credentials or financial data.
+While encapsulation is essential for securing communication, it also provides an opportunity for attackers to hide or disguise malicious activity. One such technique is HTTP tunneling, where protocols such as FTP (File Transfer Protocol) or Telnet can be hidden within an HTTP packet. This allows unauthorized data to bypass egress filtering systems that are typically designed to restrict certain types of traffic, such as FTP, from leaving a network. By encapsulating non-HTTP traffic inside legitimate HTTP traffic, attackers can evade detection and exploit the network infrastructure for nefarious purposes.
+
+Similarly, encapsulation can be used to carry out more sophisticated network attacks, such as VLAN hopping. Virtual Local Area Networks (VLANs) are designed to segment network traffic into separate broadcast domains, improving network performance and security. Each VLAN is identified by a VLAN tag that is added to network frames, following the IEEE 802.1Q standard. These VLAN tags ensure that switches know which VLAN a frame belongs to and how to forward it appropriately.
+
+:bulb: IEEE 802.1Q is a networking standard that defines how VLAN (Virtual Local Area Network) tags are added to Ethernet frames. This standard allows for multiple VLANs to be transmitted over a single physical network link, enabling network segmentation without requiring separate physical infrastructure.
+
+The VLAN tag is inserted into the Ethernet frame between the source MAC address and the EtherType/Length fields, and it includes a VLAN identifier (VLAN ID), which helps switches and other network devices determine which VLAN a frame belongs to. IEEE 802.1Q supports up to 4096 unique VLANs, each identified by a unique 12-bit VLAN ID.
+
+However, attackers can exploit multilayer protocol encapsulation to bypass VLAN segmentation. This is done by using a double-encapsulated VLAN tag, where the first VLAN tag wraps an already encapsulated frame with a second VLAN tag. The first switch in the network removes the outer VLAN tag, but the second switch processes the remaining VLAN tag, which could allow the attacker to access a VLAN they would normally be isolated from. This attack is an example of how encapsulation can be manipulated to disrupt network segmentation and gain unauthorized access to network resources.
+
+Another area where encapsulation and multilayer protocols play a crucial role is in the context of Supervisory Control and Data Acquisition (SCADA) systems, used primarily to monitor and control industrial processes by gathering data from sensors and devices across various locations and sending control commands back to them. These systems traditionally rely on proprietary communication protocols, but with the increasing adoption of IP-based networks, many SCADA systems now use standard transport protocols like TCP/IP for communication.
+
+:bulb: SCADA systems often use the Distributed Network Protocol (DNP3), which is a widely used protocol in the electric and water utility sectors. DNP3, like TCP/IP, is a multilayer protocol, meaning it defines how data is transmitted between devices at both the transport and link layers. The major challenge with SCADA systems is the need to connect these traditionally isolated systems to public or corporate networks, which introduces significant security risks. One common approach to bridging SCADA systems with IP networks is encapsulating DNP3 over TCP/IP.
+
+While this encapsulation enables communication across diverse systems, it also exposes SCADA systems to various cybersecurity threats. Encapsulation can be exploited in man-in-the-middle (MITM) attacks, where an attacker intercepts and manipulates the communication between devices and control centers. Given the critical nature of SCADA systems in managing infrastructure, any compromise could lead to disastrous consequences such as system outages, data tampering, or even physical damage to equipment.
+
+### Open Questions ###
+
+1. What role does encapsulation play in the TCP/IP protocol suite?
+<details>
+  <summary>Show answer</summary>
+Encapsulation ensures that data is wrapped in protocol-specific headers as it moves through the layers of the network stack. This allows each layer to operate independently while preserving data integrity and enabling secure communication.
+</details>
+
+2. How does the TCP layer contribute to reliable data transmission?
+<details>
+  <summary>Show answer</summary>
+TCP ensures reliable data transmission by establishing a connection-oriented session, providing error-checking, and implementing flow control mechanisms. These features help detect lost packets and ensure their retransmission when necessary.
+</details>
+
+3. Why is HTTP tunneling a security risk in network communication?
+<details>
+  <summary>Show answer</summary>
+HTTP tunneling allows attackers to disguise unauthorized traffic, such as FTP or Telnet, inside legitimate HTTP packets. This technique enables malicious data to bypass security controls like egress filtering, making detection and prevention more challenging.
+</details>
+
+4. How does VLAN segmentation enhance network security?
+<details>
+  <summary>Show answer</summary>
+VLAN segmentation isolates network traffic into separate broadcast domains, reducing congestion and preventing unauthorized access. By assigning VLAN tags to network frames, switches can direct traffic only to intended VLANs, improving overall security.
+</details>
+
+5. What is VLAN hopping, and how does it exploit encapsulation?
+<details>
+  <summary>Show answer</summary>
+VLAN hopping is an attack that manipulates VLAN tagging to bypass network segmentation and gain unauthorized access. By using double-encapsulated VLAN tags, an attacker can trick switches into forwarding traffic to restricted VLANs.
+</details>
+
+6. Why is IEEE 802.1Q important for VLANs?
+<details>
+  <summary>Show answer</summary>
+IEEE 802.1Q defines the standard for VLAN tagging, allowing multiple VLANs to coexist on a single network link. It enables efficient traffic management and supports up to 4096 unique VLANs, enhancing network flexibility.
+</details>
+
+7. How do SCADA systems use TCP/IP for communication?
+<details>
+  <summary>Show answer</summary>
+SCADA systems increasingly use TCP/IP to transmit sensor data and control commands across industrial networks. By encapsulating protocols like DNP3 over TCP/IP, SCADA systems can integrate with modern IT infrastructures but also face heightened cybersecurity risks.
+</details>
+
+8. What are the security concerns when connecting SCADA systems to IP networks?
+<details>
+  <summary>Show answer</summary>
+Connecting SCADA systems to IP networks exposes them to cyber threats such as man-in-the-middle (MITM) attacks. Attackers can intercept and manipulate communications, potentially leading to system failures, data corruption, or even physical damage.
+</details>
+
+9. How does SSL/TLS encryption enhance secure communication?
+<details>
+  <summary>Show answer</summary>
+SSL/TLS encryption secures data by encrypting it before it reaches the transport layer, preventing unauthorized access. This is especially important for sensitive transactions, such as financial operations or login credentials.
+</details>
+
+10. Why is encapsulation both beneficial and potentially dangerous in networking?
+<details>
+  <summary>Show answer</summary>
+Encapsulation enables structured data transmission across multiple layers, improving security and efficiency. However, it can also be exploited by attackers to conceal malicious activities, such as bypassing security controls or conducting VLAN hopping attacks.
+</details>
+
+---
+
+## 4.1.5 Converged protocols (e.g., Internet Small Computer Systems Interface (iSCSI), Voice over Internet Protocol (VoIP), InfiniBand over Ethernet, Compute Express Link) ##
+
+Converged protocols are networking technologies that integrate multiple types of data traffic—such as voice, video, storage, and computing—over a single network infrastructure. They enable a more efficient use of resources and simplify network management by combining different types of data into a single network system. 
+
+**iSCSI** is a protocol that allows you to send Small Computer Systems Interface (SCSI) commands over a TCP/IP network. In simple terms, iSCSI enables devices on a network to connect to storage systems as if they were directly attached, even if they are far apart. It's primarily used to link servers to storage devices (like SANs, or Storage Area Networks) over Ethernet, which helps businesses consolidate and manage their data storage more efficiently. By using the existing IP network infrastructure, iSCSI reduces the need for separate, dedicated storage networks.
+
+:bulb: The performance of an iSCSI connection largely depends on the underlying network bandwidth. It typically uses standard Ethernet networks, and the bandwidth is determined by the speed of the Ethernet connection (e.g., 1Gbps, 10Gbps, etc.).
+If using a standard 1Gbps Ethernet connection, the maximum theoretical bandwidth would be around 1Gbps.
+For higher performance, iSCSI can be used with 10Gbps or even 40Gbps Ethernet links, enabling faster data transfer rates.
+Latency: Since iSCSI relies on TCP/IP, network latency can impact performance. For best performance, a low-latency, high-speed network is ideal.
+Storage Network: In some cases, iSCSI is used in dedicated storage networks to avoid congestion from regular network traffic, which could otherwise affect performance.
+
+**VoIP** is a technology that allows voice communication (phone calls) to be transmitted over the Internet rather than through traditional phone lines. VoIP works by converting voice signals into digital data packets, which are then sent over the Internet using standard networking protocols like TCP/IP. VoIP systems are widely used in businesses and homes because they are cost-effective, flexible, and easy to integrate with other services like video calls and messaging. Services such as Zoom and Google Voice are all examples of VoIP solutions.
+
+:bulb: 
+Here's how VoIP works:
+1. SIP (Session Initiation Protocol)
+SIP is used to set up, manage, and end calls. When you make a call, SIP sends an INVITE to the recipient’s device, and they respond with an OK to accept. SIP handles things like codec selection (how the audio is encoded) and call status.
+2. RTP (Real-Time Transport Protocol)
+RTP carries the actual voice data during a call. It breaks the audio into small packets and sends them in real-time over the network. The packets are reassembled at the destination based on timestamps and sequence numbers to ensure the call quality.
+3. SRTP (Secure Real-Time Transport Protocol)
+SRTP adds security to RTP. It encrypts the voice packets to prevent eavesdropping and ensures the integrity of the data, so no one can alter the conversation.
+In summary, SIP sets up the call, RTP handles the voice data, and SRTP secures it. 
+
+**InfiniBand** is a high-performance network architecture used primarily in data centers and supercomputing environments. It provides high throughput, low latency, and efficient communication between servers and storage devices. When InfiniBand is used over Ethernet, it means that it leverages Ethernet as the transport layer but still maintains the InfiniBand architecture for high-performance computing applications. This approach allows businesses to take advantage of InfiniBand's high-speed data transfer while using Ethernet, which is ubiquitous and cost-effective.
+
+**Compute Express Link (CXL)** is a high-speed interconnect protocol designed for connecting processors, memory, and other devices in data centers. It is intended to improve the performance of systems by allowing direct memory access and data sharing between processors and memory pools. CXL enables more efficient use of hardware resources, reducing bottlenecks in data transfer and making it possible to optimize workloads across different types of devices. In essence, it is an evolution in the way servers and data centers handle memory and compute power, supporting high-performance computing tasks like artificial intelligence and machine learning.
+
+**MPLS** is a data-carrying technique that uses labels to direct data packets through a network. It operates between the data link layer and the network layer (Layer 2.5) of the OSI model. In a typical network, routers make decisions about where to forward data packets based on IP addresses. In MPLS, instead of examining the packet's IP address, routers use labels that are attached to packets. These labels allow for faster and more efficient routing because the router doesn’t need to perform a complex lookup for each packet. MPLS is commonly used in large-scale networks, especially by service providers, to offer VPNs (Virtual Private Networks), traffic engineering, and Quality of Service (QoS), ensuring that the network can handle various types of data, like video and voice, with the necessary performance and reliability.
+
+:necktie: The main advantage of converged protocols is that they reduce the complexity of network management. Instead of maintaining separate networks for different types of traffic (for example, one network for voice, another for data storage, and yet another for computing), converged protocols allow you to use one network to handle multiple types of traffic. This can lead to cost savings, easier management, and improved performance because the same infrastructure supports more workloads.
+
+### Open Questions ###
+
+1. What are converged protocols, and why are they important in networking?
+<details>
+  <summary>Show answer</summary>
+Converged protocols integrate multiple types of data traffic—such as voice, video, storage, and computing—over a single network infrastructure. They simplify network management, improve resource efficiency, and reduce costs by eliminating the need for separate networks.
+</details>
+
+2. How does iSCSI enable efficient storage networking over IP?
+<details>
+  <summary>Show answer</summary>
+iSCSI (Internet Small Computer Systems Interface) enables devices to send SCSI commands over TCP/IP networks. It allows servers to access remote storage devices as if they were directly attached, facilitating data consolidation and efficient storage management using standard Ethernet infrastructure.
+</details>
+
+3. What factors influence the performance of an iSCSI connection?
+<details>
+  <summary>Show answer</summary>
+The performance of an iSCSI connection depends on:
+Network Bandwidth: Higher speeds (e.g., 10Gbps, 40Gbps) improve performance.
+Latency: Low-latency networks enhance responsiveness.
+Storage Network Design: Using a dedicated storage network prevents congestion from other traffic.
+</details>
+
+4. How does VoIP convert voice communication into digital data?
+<details>
+  <summary>Show answer</summary>
+VoIP (Voice over Internet Protocol) converts analog voice signals into digital packets and transmits them over the Internet using networking protocols. It enables cost-effective, flexible communication by integrating voice with data services.
+</details>
+
+5. What are the roles of SIP, RTP, and SRTP in VoIP?
+<details>
+  <summary>Show answer</summary>
+SIP (Session Initiation Protocol): Establishes, manages, and terminates VoIP calls.
+RTP (Real-Time Transport Protocol): Transmits voice data in real time.
+SRTP (Secure Real-Time Transport Protocol): Encrypts and secures voice data to prevent eavesdropping.
+</details>
+
+6. Why is InfiniBand used in high-performance computing, and how does it work over Ethernet?
+<details>
+  <summary>Show answer</summary>
+InfiniBand is a high-performance network architecture used in supercomputing and data centers due to its low latency and high throughput. When used over Ethernet, it retains InfiniBand’s efficiency while leveraging Ethernet’s cost-effectiveness and widespread availability.
+</details>
+
+7. How does Compute Express Link (CXL) improve system performance in data centers?
+<details>
+  <summary>Show answer</summary>
+Compute Express Link (CXL) is a high-speed interconnect protocol that improves data center performance by enabling direct memory access and resource sharing between processors and memory. It reduces bottlenecks, optimizes workloads, and enhances support for AI and machine learning tasks.
+</details>
+
+8. What is MPLS, and how does it optimize network traffic routing?
+<details>
+  <summary>Show answer</summary>
+MPLS (Multiprotocol Label Switching) enhances network efficiency by using labels instead of IP addresses to forward data packets. This speeds up routing decisions and supports QoS (Quality of Service) for handling different types of traffic, such as voice and video.
+</details>
+
+9. Why is MPLS referred to as operating at Layer 2.5 of the OSI model?
+<details>
+  <summary>Show answer</summary>
+MPLS operates at Layer 2.5 of the OSI model because it combines characteristics of both Layer 2 (Data Link) and Layer 3 (Network). It inserts labels between these layers to enable fast and efficient routing without complex IP lookups.
+</details>
+
+10. What are the benefits of converged protocols in network management?
+<details>
+  <summary>Show answer</summary>
+Converged protocols simplify network management by allowing a single network to handle multiple traffic types. Benefits include reduced infrastructure costs, streamlined administration, and improved performance through optimized resource utilization.
+</details>
+
+---
+
+## 4.1.6 Transport architecture (e.g., topology, data/control/management plane, cut-through/store-and-forward) ##
+
+Network topology is the physical or logical arrangement of devices and how they are connected. It plays a crucial role in performance, reliability, and scalability of the network. Some key topologies are:
+- Star Topology: In a star network, all devices are connected to a central device like a hub or a switch. This allows for easy management, but if the central device fails, the whole network can go down.
+- Bus Topology: Devices are connected in a linear sequence to a single communication medium. This type is cost-effective but not scalable, as performance decreases as more devices are added.
+- Ring Topology: Devices are arranged in a circular configuration where each device connects to two others. It offers better fault tolerance than a bus topology but suffers from performance issues if the ring is broken.
+- Mesh Topology: Every device is interconnected with every other device in the network. This topology is highly reliable due to multiple paths for data transmission, but it requires more cabling and is more complex to manage.
+
+<img width="512" height="251" alt="topo" src="https://github.com/user-attachments/assets/fa9ea725-41b3-4038-ab03-0f6d73d9c543" />
+
+:bulb: The physical topology refers to the actual, tangible layout of network devices (such as switches, routers, and computers) and how they are physically connected via cables, fiber optics, or wireless links.
+The logical topology describes how data actually flows between devices in a network, regardless of the physical layout. It defines which devices communicate directly and how network protocols operate over the infrastructure.
+
+Three planes work in unison to ensure the network operates efficiently and reliably, each contributing a different layer of functionality to the network’s overall behavior.
+
+- **Data Plane:** The data plane is responsible for the actual transmission of data packets. It makes forwarding decisions based on routing and forwarding tables, which are pre-configured or dynamically updated by control plane protocols. This plane handles the “day-to-day” traffic moving through the network.
+
+- **Control Plane:** The control plane governs the operation of the data plane by determining how data should be forwarded. It uses routing protocols (like OSPF, BGP, RIP) to establish and update routing tables, ensuring packets are directed to the correct destination. The control plane is crucial for maintaining the overall structure and efficiency of the network, as it decides on optimal paths for data transfer, based on factors like network topology, traffic load, and policy rules.
+
+- **Management Plane:** The management plane involves the configuration, monitoring, and maintenance of the network. It handles administrative tasks like setting up devices, tracking performance, logging errors, and enforcing network policies. Management tools like SNMP (Simple Network Management Protocol) and NetFlow provide insights into network health, performance, and security. The management plane is key to the network’s operational oversight and troubleshooting.
+
+When forwarding packets, network devices (like switches) have two primary methods of handling data: cut-through and store-and-forward.
+
+**Cut-through:** In this method, a switch begins forwarding the packet to its next destination as soon as it reads the destination address in the frame header, even before the entire packet is received. The key advantage of cut-through switching is low latency, as there’s no waiting for the full packet. However, this method doesn’t perform any error checking before forwarding, meaning corrupted or incomplete packets could be sent forward, which can lead to issues downstream. Cut-through is most useful in environments where speed is critical, and error checking can be handled elsewhere in the system.
+
+**Store-and-Forward:** With store-and-forward switching, the switch waits until it has received the entire packet and performs error checking (like CRC) before forwarding it. While this increases latency (because the switch must wait to receive the entire packet), it ensures that only valid packets are passed along the network. This method is more reliable because it prevents errors from propagating across the network. It’s commonly used in networks where reliability and data integrity are more important than raw speed.
+
+### Open Questions ###
+
+1. What is Transport Architecture in networking?
+<details>
+  <summary>Show answer</summary>
+Transport Architecture refers to the design of a network's topology, functional planes (data, control, and management), and packet forwarding methods. It defines how data moves through the network to ensure efficiency, reliability, and scalability.
+</details>
+
+2. What are the key types of network topologies, and how do they impact performance?
+<details>
+  <summary>Show answer</summary>
+Star: Centralized management, but failure of the hub/switch disrupts the entire network.
+Bus: Cost-effective but becomes inefficient with more devices.
+Ring: Good fault tolerance, but a single break can affect performance.
+Mesh: Highly reliable with multiple paths, but complex and expensive to implement.
+</details>
+
+3. How do physical and logical topologies differ in a network?
+<details>
+  <summary>Show answer</summary>
+Physical topology is the actual layout of devices and cables.
+Logical topology defines how data flows between devices, independent of physical connections.
+Example: A physically star-wired network using a hub operates as a logical bus since all devices receive the same transmission.
+</details>
+
+4. What are the three planes in networking, and what role does each play?
+<details>
+  <summary>Show answer</summary>
+Data Plane: Forwards data packets based on routing/forwarding tables.
+Control Plane: Establishes routing tables using protocols like OSPF, BGP, and RIP.
+Management Plane: Handles network configuration, monitoring, and security policies using tools like SNMP and NetFlow.
+</details>
+
+5. How does the data plane handle packet forwarding?
+<details>
+  <summary>Show answer</summary>
+Responsible for actual data transmission.
+Uses routing/forwarding tables to send packets to their destinations.
+</details>
+
+6. What is the function of the control plane in a network?
+<details>
+  <summary>Show answer</summary>
+Determines optimal data paths using routing protocols.
+Updates routing tables dynamically based on network topology changes.
+</details>
+
+7. Why is the management plane essential for network operations?
+<details>
+  <summary>Show answer</summary>
+Manages network configuration, monitoring, and troubleshooting.
+Ensures performance, security, and compliance with network policies.
+</details>
+
+8. What are the differences between cut-through and store-and-forward packet forwarding?
+<details>
+  <summary>Show answer</summary>
+Cut-Through: Forwards packets as soon as the destination address is read, reducing latency.
+Store-and-Forward: Receives the entire packet, performs error checking, and then forwards it, ensuring reliability.
+</details>
+
+9. What are the advantages and disadvantages of cut-through switching?
+<details>
+  <summary>Show answer</summary>
+Pros: Low latency, ideal for high-speed environments.
+Cons: No error checking, so corrupted packets may be forwarded.
+</details>
+
+10. Why is store-and-forward switching preferred in some network environments?
+<details>
+  <summary>Show answer</summary>
+Ensures data integrity by filtering out corrupted packets.
+Suitable for environments where reliability is more critical than raw speed.
+</details>
+
+---
